<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">


	<!--Наличие Gaming Keyboard/Mouse - bool (тож чекбоксом).-->

	<home.work.pcconfig.ui.detail.views.LineEditView
		android:id="@+id/order_matherboard"
		style="@style/qwe"
		android:hint="@string/order_matherboard_hint"/>

	<home.work.pcconfig.ui.detail.views.LinePickerView
		android:id="@+id/order_cpu"
		style="@style/qwe"
		android:hint="@string/order_cpu_hint"/>

	<home.work.pcconfig.ui.detail.views.LineEditView
		android:id="@+id/order_gpu"
		style="@style/qwe"
		android:hint="@string/order_gpu_hint"/>

	<home.work.pcconfig.ui.detail.views.LinePickerView
		android:id="@+id/order_ram"
		style="@style/qwe"
		android:hint="@string/order_ram_hint"/>

	<LinearLayout
		style="@style/LL.H"
		android:layout_marginRight="8dp">

		<home.work.pcconfig.ui.detail.views.LineEditView
			android:id="@+id/order_storage_size"
			style="@style/qwe"
			android:layout_weight="1"
			android:hint="@string/order_gpu_hint"/>

		<CheckBox
			android:id="@+id/order_storage"
			style="@style/OrderEdit_Checkbox"
			android:layout_gravity="center"
			android:gravity="center"
			android:hint="@string/storage_ssd"/>
	</LinearLayout>

	<CheckBox
		android:id="@+id/order_gaming"
		style="@style/OrderEdit_Checkbox"
		android:layout_gravity="center"
		android:gravity="center"
		android:hint="@string/gaming_edition"/>

	<Button style="@style/Button"
			android:id="@+id/order_action_btn"
			android:text="@string/order_create_btn"
			android:layout_width="match_parent"/>
</LinearLayout>