<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="@style/LL.V"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<android.support.v7.widget.RecyclerView
		app:layoutManager="LinearLayoutManager"
		android:id="@+id/recyclerview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/linearLayout"
		android:layout_alignParentTop="true">

	</android.support.v7.widget.RecyclerView>

	<LinearLayout
		android:id="@+id/linearLayout"
		style="@style/LL.H"
		android:layout_alignParentBottom="true"
		android:paddingBottom="8dp"
		android:paddingTop="8dp">

		<Button
			android:id="@+id/viewer_delete_btn"
			style="@style/ButtonViewer"
			android:text="@string/viewer_delete_btn"/>

		<Button
			android:id="@+id/viewer_add_btn"
			style="@style/ButtonViewer"
			android:text="@string/viewer_add_btn"/>

		<Button
			android:id="@+id/viewer_edit_btn"
			style="@style/ButtonViewer"
			android:text="@string/viewer_edit_btn"/>
	</LinearLayout>
</RelativeLayout>